// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormError> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "backgroundColor": "rgba(239, 81, 96, 0.2)",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
          "minWidth": 60,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 24,
          },
          false,
          Object {
            "color": "#ef5160",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "transparent",
          "borderLeftWidth": 8,
          "borderRightColor": "transparent",
          "borderRightWidth": 8,
          "borderTopColor": "rgba(239, 81, 96, 0.2)",
          "borderTopWidth": 8,
          "left": 20,
          "position": "absolute",
          "top": 44,
        },
      ]
    }
  />
</View>
`;

exports[`<FormError> renders when {text} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "backgroundColor": "rgba(239, 81, 96, 0.2)",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
          "minWidth": 60,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 24,
          },
          false,
          Object {
            "color": "#ef5160",
          },
        ]
      }
    >
      You must complete all fields
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "transparent",
          "borderLeftWidth": 8,
          "borderRightColor": "transparent",
          "borderRightWidth": 8,
          "borderTopColor": "rgba(239, 81, 96, 0.2)",
          "borderTopWidth": 8,
          "left": 20,
          "position": "absolute",
          "top": 44,
        },
      ]
    }
  />
</View>
`;

exports[`<FormError> when {icon} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "backgroundColor": "rgba(239, 81, 96, 0.2)",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
          "minWidth": 60,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 24,
          },
          false,
          Object {
            "color": "#ef5160",
          },
        ]
      }
    >
      You must complete all fields
    </Text>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../components/Icon/assets/nav-arrow.png",
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "height": 20,
            "width": 20,
          },
          Object {
            "marginLeft": 12,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "transparent",
          "borderLeftWidth": 8,
          "borderRightColor": "transparent",
          "borderRightWidth": 8,
          "borderTopColor": "rgba(239, 81, 96, 0.2)",
          "borderTopWidth": 8,
          "left": 20,
          "position": "absolute",
          "top": 44,
        },
      ]
    }
  />
</View>
`;

exports[`<FormError> when {text} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "backgroundColor": "rgba(239, 81, 96, 0.2)",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
          "minWidth": 60,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 24,
          },
          false,
          Object {
            "color": "#ef5160",
          },
        ]
      }
    >
      You must complete all fields
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderLeftColor": "transparent",
          "borderLeftWidth": 8,
          "borderRightColor": "transparent",
          "borderRightWidth": 8,
          "borderTopColor": "rgba(239, 81, 96, 0.2)",
          "borderTopWidth": 8,
          "left": 20,
          "position": "absolute",
          "top": 44,
        },
      ]
    }
  />
</View>
`;
